# MLOps-Laksh-B23CS1037

./: .gitignore  README.md  index.html  main.ipynb  pyproject.toml  report.tex
Docker-A/: Dockerfile  evaluate.py  requirements.txt  train.py  train_output.txt
HuggingFace-A/: .env.local  Dockerfile  README.md  eval_output.txt  evaluate.py  requirements.txt  train.py  train_output.txt
HuggingFace-A/wandb/: latest-run
HuggingFace-A/wandb/run-20260221_102153-bmkwwwfc/: run-bmkwwwfc.wandb
HuggingFace-A/wandb/run-20260221_102344-p26h6vze/: run-p26h6vze.wandb
HuggingFace-A/wandb/run-20260221_103529-gunsid3k/: run-gunsid3k.wandb
HuggingFace-A/wandb/run-20260221_103614-pa0fl9wc/: run-pa0fl9wc.wandb
HuggingFace-A/wandb/run-20260221_103711-ep08kw1w/: run-ep08kw1w.wandb
HuggingFace-A/wandb/run-20260221_103943-yimt0xa2/: run-yimt0xa2.wandb
HuggingFace-A/wandb/run-20260221_104047-8qotba36/: run-8qotba36.wandb
HuggingFace-A/wandb/run-20260221_104239-oqcbvznr/: run-oqcbvznr.wandb
contracts/: fintech_contract.yaml  orders_contract.yaml  rides_contract.yaml  thermostat_contract.yaml
docs/: index.html
q1_a_experiments/: fashion_mnist_experiments_results.json  mnist_experiments_results.json
q1_a_experiments/plots/: full_comparison_matrix.csv
q1_b_experiments/: fashion_mnist_svm_experiments_results.json  mnist_svm_experiments_results.json
q1_b_experiments/plots/: svm_param_matrix.csv
q2_experiments/: device_comparison_experiments_results.json
q2_experiments/plots/: hardware_efficiency_metrics.csv
scripts/: validate_contracts.py
(+43 files in other folders)
