[project]
name = "conf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fvcore>=0.1.5.post20221221",
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.8",
    "nbmerge>=0.0.4",
    "notebook>=7.5.2",
    "papermill>=2.6.0",
    "ray[tune]>=2.53.0",
    "scikit-learn>=1.7.2",
    "scikit-learn-intelex>=2025.10.1",
    "torch>=2.10.0",
    "torch-summary>=1.4.5",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
    "tqdm-loggable>=0.2",
]
